--- a/css/main.scss
+++ b/css/main.scss
@@ -5,33 +5,10 @@
 
 @import "sansation";
 @import "icomoon";
+@import "utils"; //our own utilities
 
 /* Variables */
 $footer-height: 60px; /* Does not adjust the position of #to-top */
-
-/**
- * $size: Font-size to be converted from `px` to `rem`
- * $base: Base font-size (Change its value as per your need)
- * @return void
- */
-@mixin font-size($size, $base: 16) {
-  font-size: $size; // fallback for old browsers
-  font-size: ($size / $base) * 1rem;
-}
-
-/* Let's make long links wrap */
-/* https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/ */
-@mixin word-wrap() {
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-  -ms-word-break: break-all;
-  word-break: break-word;
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
-  hyphens: auto;
-}
-
 
 /*
       Created by CSS Portal Layout Generator
@@ -639,28 +616,4 @@ background: rgba(0, 0, 0, 0.06) none repeat scroll 0% 0%;
     #to-top {
         display: none;
     }
-}
-
-
-
-
-/* Utility */
-
-//Youtube-video container (http://embedresponsively.com/)
-.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
-
-//Center things
-.center { margin-left: auto; margin-right: auto; text-align: center; }
-
-/* Clearfix SCSS placeholder, use with @extend %clearfix; where you need it */
-%clearfix {
-  /* For modern browsers */
-  &:before, &:after {
-    content: "";
-    display: table;
-  }
-  &:after {
-    clear: both;
-  }
-  *zoom:1; /* For IE 6/7 (trigger hasLayout) */
 }
