Removed bottom border from .site-nav a

--- a/css/main.scss
+++ b/css/main.scss
@@ -385,6 +385,7 @@ nav ul {
             padding: 5px 10px;
             color: #fff;
             @include font-size(15);
+            border-bottom: none;
             text-decoration: none;
         }
 
