Changed canonical URL in the link element to not include the .html extension

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,6 +37,6 @@
   })(document);
 </script>
 
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">{% comment %}
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' | replace:'.html','' | prepend: site.baseurl | prepend: site.url }}">{% comment %}
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">{% endcomment %}
 </head>
