--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@56fl001">
   <meta name="twitter:domain" content="56fl001.fldx.org">
-  <meta name="twitter:url" property="og:url" content="http://56fl001.fldx.org">
+  <meta name="twitter:url" property="og:url" content="{{ page.url | replace:'index.html','' | replace:'.html','' | prepend: site.baseurl | prepend: site.url }}">
   <meta name="twitter:creator" content="@56fl001">
   <meta name="twitter:title" property="og:title" content="{% if page.title %}{{ page.title }} &ndash; 56FL001{% else %}{{ site.title }}{% endif %}">
   <meta name="twitter:description" property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
