Changed some title texts in nav links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,10 +6,10 @@
 
 <nav class="site-nav" role="navigation">
   <ul>
-    <li><a href="{{ site.url }}" title="Main Page">Main Page</a></li>
+    <li><a href="{{ site.url }}" title="Home Page">Main Page</a></li>
     <li><a href="{{ site.url }}/station" title="Some Info About my Station">Info About my Station</a></li>
     <li><a href="{{ site.url }}/vaasa" title="Information About my City Vaasa">My City</a></li>
-    <li><a href="{{ site.url }}/qsls" title="Some Received QSL Cards">Received QSLs</a></li>
+    <li><a href="{{ site.url }}/qsls" title="Some of my Received QSL Cards">Received QSLs</a></li>
     <li><a href="{{ site.url }}/files" title="Some Radio Related Files">Downloads</a></li>
     <li><a href="{{ site.url }}/links" title="Links to Other Radio Related Websites">Links</a></li>
   </ul>
