--- a/_sass/_utils.scss
+++ b/_sass/_utils.scss
@@ -36,6 +36,30 @@
   *zoom:1; /* For IE 6/7 (trigger hasLayout) */
 }
 
+//Content shortcut for screen reader and keyboard users
+.skip-main {
+    left: -999px;
+    position: absolute;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    z-index: -999;
+}
+
+.skip-main:focus, .skip-main:active {
+    color: $red;
+    background-color: #fff;
+    left: auto;
+    top: auto;
+    width: auto;
+    height: auto;
+    overflow: auto;
+    padding: 0.5em 1em;
+    text-align: center;
+    font-size: 1.2em;
+    z-index: 999;
+}
 
 //Youtube-video container (http://embedresponsively.com/)
 .embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
