--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,5 @@
+<a href="#content" class="skip-main">Skip to main content</a>
+
 <header class="site-header" id="header" role="banner">
 <div style="display: inline;">
 <a class="image-link" href="{{ site.url }}"><img src="{{ site.url }}/images/56fl001-timos.png" alt="56FL001's Radio Website"></a>
