Fixed a mistake in SCSS

--- a/_sass/_utils.scss
+++ b/_sass/_utils.scss
@@ -48,7 +48,7 @@
 }
 
 .skip-main:focus, .skip-main:active {
-    color: $red;
+    //color: ;
     background-color: #fff;
     left: auto;
     top: auto;
