--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,28 @@
 <footer class="site-footer" id="footer" role="contentinfo">
-  <span id="social"><a href="http://twitter.com/56FL001" title="56FL001 on Twitter" aria-label="56FL001 on Twitter"><span class="icon-twitter"></span></a> <a href="http://www.facebook.com/groups/130326428266/" title="Foxtrot Lima DX Group in Facebook" aria-label="Foxtrot Lima DX Group in Facebook"><span class="icon-facebook"></span></a> <a href="http://www.youtube.com/user/56FL001" title="56FL001 on Youtube" aria-label="56FL001 on Youtube"><span class="icon-youtube"></span></a> <a href="http://www.flickr.com/photos/124505319@N05/" title="56FL001 on Flickr" aria-label="56FL001 on Flickr"><span class="icon-flickr"></span></a></span> &copy; <a href="{{ site.url }}/contact" id="contact"><span class="sr-only">Contact:</span> 56FL001 Timo</a> 2011&ndash;{{ 'now' | date: "%Y" }}
+  <ul id="social">
+  <li><a href="http://twitter.com/56FL001" aria-label="56FL001 on Twitter"><span class="icon-twitter"></span></a>
+  <li><a href="http://www.facebook.com/groups/130326428266/" aria-label="Foxtrot Lima DX Group in Facebook"><span class="icon-facebook"></span></a>
+  <li><a href="http://www.youtube.com/user/56FL001" aria-label="56FL001 on Youtube"><span class="icon-youtube"></span></a>
+  <li><a href="http://www.flickr.com/photos/124505319@N05/" aria-label="56FL001 on Flickr"><span class="icon-flickr"></span></a>
+  </ul>
+  &copy; <a href="{{ site.url }}/contact" id="contact"><span class="sr-only">Contact:</span> 56FL001 Timo</a> 2011&ndash;{{ 'now' | date: "%Y" }}
   <a href="#header" id="to-top" aria-label="Back to top of page">
     <i class="icon-angle-up icon-arrow-up"><!-- &#708; --></i>
     <i class="fallback">&uarr;</i>
   </a>
 </footer>
+
+<!--
+<footer class="site-footer" id="footer" role="contentinfo">
+  <span id="social"><a href="http://twitter.com/56FL001" title="56FL001 on Twitter" aria-label="56FL001 on Twitter"><span class="icon-twitter"></span></a> <a href="http://www.facebook.com/groups/130326428266/" title="Foxtrot Lima DX Group in Facebook" aria-label="Foxtrot Lima DX Group in Facebook"><span class="icon-facebook"></span></a> <a href="http://www.youtube.com/user/56FL001" title="56FL001 on Youtube" aria-label="56FL001 on Youtube"><span class="icon-youtube"></span></a> <a href="http://www.flickr.com/photos/124505319@N05/" title="56FL001 on Flickr" aria-label="56FL001 on Flickr"><span class="icon-flickr"></span></a></span> &copy; <a href="{{ site.url }}/contact" id="contact"><span class="sr-only">Contact:</span> 56FL001 Timo</a> 2011&ndash;{{ 'now' | date: "%Y" }}
+  <a href="#header" id="to-top" aria-label="Back to top of page">
+    <i class="icon-angle-up icon-arrow-up"><!-- &#708; -->
+    
+    <!--</i>
+    <i class="fallback">&uarr;</i>
+  </a>
+</footer>
+-->
 
 <script>
   function nt() {
