Fixed the URL of the fallback PNG for the back to top arrow

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
   <a href="#header" id="to-top" aria-label="Back to top of page">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="14" height="14" role="img">
     <title>Back to top</title>
-    <image src="back-to-top-arrow-white.png" xlink:href=""></image>
+    <image src="images/icons/back-to-top-arrow-white.png" xlink:href=""></image>
     <path d="M445.901 362.215c6.938 6.861 18.151 6.861 25.063 0 6.938-6.861 6.938-17.945 0-24.807l-202.445-200.448c-6.912-6.861-18.125-6.861-25.037 0l-202.445 200.448c-6.912 6.861-6.938 17.945 0 24.807s18.125 6.861 25.063 0l189.901-182.81 189.901 182.81z"/>
     </svg>
   </a>
