Added fallback PNGs for SVG social icons in the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,17 +1,10 @@
 <footer class="site-footer" id="footer" role="contentinfo">
-  <!--
-  <ul id="social">
-  <li><a href="http://twitter.com/56FL001" aria-label="56FL001 on Twitter"><span class="icon-twitter"></span></a>
-  <li><a href="http://www.facebook.com/groups/130326428266/" aria-label="Foxtrot Lima DX Group in Facebook"><span class="icon-facebook"></span></a>
-  <li><a href="http://www.youtube.com/user/56FL001" aria-label="56FL001 on Youtube"><span class="icon-youtube"></span></a>
-  <li><a href="http://www.flickr.com/photos/124505319@N05/" aria-label="56FL001 on Flickr"><span class="icon-flickr"></span></a>
-  </ul>
-  -->
   <ul id="social">
     <li>
       <a class="social-twitter" href="http://twitter.com/56FL001" aria-label="56FL001 on Twitter">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="18" height="18" role="img">
       <title>56FL001 on Twitter</title>
+      <image src="images/icons/icon-twitter-white.png" xlink:href=""></image>
       <path d="M512 97.209c-18.838 8.354-39.082 14.001-60.33 16.54 21.686-13 38.343-33.585 46.186-58.115-20.298 12.039-42.778 20.78-66.705 25.49-19.16-20.415-46.461-33.17-76.673-33.17-58.011 0-105.044 47.029-105.044 105.039 0 8.233.929 16.25 2.72 23.939-87.3-4.382-164.701-46.2-216.509-109.753-9.042 15.514-14.223 33.558-14.223 52.809 0 36.444 18.544 68.596 46.73 87.433-17.219-.546-33.416-5.271-47.577-13.139-.01.438-.01.878-.01 1.321 0 50.894 36.209 93.348 84.261 103-8.813 2.4-18.094 3.686-27.674 3.686-6.769 0-13.349-.66-19.764-1.886 13.368 41.73 52.16 72.103 98.126 72.948-35.95 28.175-81.243 44.967-130.458 44.967-8.479 0-16.84-.497-25.058-1.47 46.486 29.805 101.701 47.197 161.021 47.197 193.211 0 298.868-160.062 298.868-298.872 0-4.554-.103-9.084-.305-13.59 20.528-14.81 38.336-33.31 52.418-54.374z"/></svg>
       </a>
     </li>
@@ -20,6 +13,7 @@
       <a class="social-fb" href="http://www.facebook.com/groups/130326428266/" aria-label="Foxtrot Lima DX Group in Facebook">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="18" height="18" role="img">
       <title>Foxtrot Lima in Facebook</title>
+      <image src="images/icons/icon-facebook-white.png" xlink:href=""></image>
       <path d="M426.672 0h-341.33c-46.936 0-85.342 38.407-85.342 85.344v341.313c0 46.969 38.406 85.343 85.342 85.343l341.33-.001c46.938 0 85.328-38.373 85.328-85.344v-341.311c0-46.937-38.391-85.344-85.328-85.344zm8.624 256h-83.296v224h-96v-224h-46.263v-73.282h46.263v-47.593c0-64.671 27.896-103.125 103.935-103.125h87.622v79.285h-71.565c-21.241-.035-23.876 11.076-23.876 31.756l-.116 39.677h96l-12.704 73.282z"/></svg>
       </a>
     </li>
@@ -27,6 +21,7 @@
     <a class="social-yt" href="http://www.youtube.com/user/56FL001" aria-label="56FL001 on Youtube">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="18" height="18" role="img">
     <title>56FL001 on Youtube</title>
+    <image src="images/icons/icon-youtube-white.png" xlink:href=""></image>
     <path d="M416 64h-320c-52.8 0-96 43.2-96 96v192c0 52.8 43.2 96 96 96h320c52.8 0 96-43.2 96-96v-192c0-52.8-43.2-96-96-96zm-224 320v-256l160 128-160 128z"/></svg>
     </a>
     </li>
@@ -34,6 +29,7 @@
       <a class="social-flr" href="http://www.flickr.com/photos/124505319@N05/" aria-label="56FL001 on Flickr">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="18" height="18" role="img">
       <title>56FL001 on Flickr</title>
+      <image src="images/icons/icon-flickr-white.png" xlink:href=""></image>
       <path d="M400 208c-35.29 0-64 28.71-64 64s28.71 64 64 64 64-28.71 64-64-28.71-64-64-64zm0-48c61.855 0 112 50.144 112 112s-50.145 112-112 112-112-50.145-112-112 50.145-112 112-112zm-400 112c0-61.856 50.144-112 112-112s112 50.144 112 112-50.144 112-112 112-112-50.144-112-112z"/></svg>
       </a>
     </li>
