--- a/css/main.scss
+++ b/css/main.scss
@@ -4,7 +4,6 @@
 @charset "utf-8";
 
 @import "sansation";
-@import "icomoon";
 @import "utils"; //our own utilities
 
 /* Variables */
@@ -360,14 +359,11 @@ iframe {
         display: inline-block;
     }
     a {
-        display: inline-block; margin-left: 6px;
-        text-decoration: none; border-bottom: none; color: #fff;
-        /*
-        &:hover, &:active, &:focus { .icon-twitter { color: #00aced; } }
-        &:hover, &:active, &:focus { .icon-facebook { color: #3b5998; } }
-        &:hover, &:active, &:focus { .icon-youtube { color: #bb0000; } }
-        &:hover, &:active, &:focus { .icon-flickr { color: #0063dc; } }
-        */
+        display: inline-block;
+        margin-left: 6px;
+        text-decoration: none;
+        border-bottom: none;
+        color: #fff;
     }
     @media only screen and (max-width: 800px) { display: none; }
 }
