Changed .news-item background color

--- a/css/main.scss
+++ b/css/main.scss
@@ -577,7 +577,7 @@ main ul {
 .news-item {
 margin: 10px -40px 10px -40px;
 padding: 3px 40px 3px 40px;
-background: rgba(0, 0, 0, 0.06) none repeat scroll 0% 0%;
+background: rgba(255,255,255,0.4) none repeat scroll 0% 0%;
 }
 
 /* Banners on index page */
