Changed .qrz11search input styling

--- a/css/main.scss
+++ b/css/main.scss
@@ -590,7 +590,13 @@ background: rgba(255,255,255,0.4) none repeat scroll 0% 0%;
 
 .qrz11search table { border: 0px; background-color: #ececec; opacity: 0.90; }
 .qrz11search label { @include font-size(16); }
-.qrz11search input[type=submit] { @include font-size(14); }
+.qrz11search input[type=submit] {
+    border: none;
+    background-color: #fff;
+    color: #252525;
+    padding: 2px;
+    @include font-size(14);
+}
 
 /* .item-list, ul with no ul styling */
 .item-list {
