Changed the color of the links in the main navigation

--- a/css/main.scss
+++ b/css/main.scss
@@ -467,7 +467,7 @@ nav ul {
 }
         .site-nav a {
             padding: 5px 10px;
-            color: #fff;
+            color: #ffffffc7;
             @include font-size(15);
             border-bottom: none;
             text-decoration: none;
