--- a/nicetitle.css
+++ b/nicetitle.css
@@ -1,14 +1,14 @@
 div.nicetitle {
     position: absolute;
     padding: 4px;
-    top: 0px;
-    left: 0px;
+    top: 0;
+    left: 0;
     color: white;
     font-size: 17px;
     font-family: "proxima-nova", Verdana, Helvetica, Arial, sans-serif;
     width: 25em;
-    /* font-weight: bold; */
-    background: url(images/ntbg.png);
+    /* background: url(images/ntbg.png); */
+    background-color: hsla(0, 0%, 20%, 0.7);
     border-radius: 8px;
 }
 div.nicetitle p {
